After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 735561 - shell: Call setup_bookmarks only when bookmarks is not NULL
shell: Call setup_bookmarks only when bookmarks is not NULL
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
: 768065 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-08-28 02:23 UTC by José Aliste
Modified: 2016-09-29 15:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell: Call setup_bookmarks only when bookmarks is not NULL (1.22 KB, patch)
2014-08-28 02:23 UTC, José Aliste
committed Details | Review

Description José Aliste 2014-08-28 02:23:33 UTC
Currently we have a critical warning because setup_bookmarks is
getting called with a NULL pointer. We should only 
call setup_bookmarks when bookmarks pointer has been initialized.
Comment 1 José Aliste 2014-08-28 02:23:36 UTC
Created attachment 284652 [details] [review]
shell: Call setup_bookmarks only when bookmarks is not NULL

This fixes a EV_IS_BOOKMARK warning because without this patch
we call setup_bookmarks with a NULL parameter when the
window is created
Comment 2 Carlos Garcia Campos 2014-08-28 13:22:29 UTC
Comment on attachment 284652 [details] [review]
shell: Call setup_bookmarks only when bookmarks is not NULL

Ok, thanks!
Comment 3 José Aliste 2014-08-28 14:01:29 UTC
Review of attachment 284652 [details] [review]:

pushed thanks
Comment 4 José Aliste 2014-08-28 14:01:45 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
Comment 5 Germán Poo-Caamaño 2016-09-29 15:05:21 UTC
*** Bug 768065 has been marked as a duplicate of this bug. ***