shell: Call setup_bookmarks only when bookmarks is not NULL

This fixes a EV_IS_BOOKMARK warning because without this patch
we call setup_bookmarks with a NULL parameter when the
window is created

https://bugzilla.gnome.org/show_bug.cgi?id=735561